<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity"
    android:background="@drawable/s">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/app9"
            android:layout_marginTop="10dp"
            android:id="@+id/a1"
            style="@style/White"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app4"
                style="@style/White"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/s"
                android:hint="@string/app06"
                style="@style/White"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app5"
                style="@style/White"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/f"
                android:hint="@string/app07"
                style="@style/White"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app6"
                style="@style/White"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/h"
                android:hint="@string/app08"
                style="@style/White"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app8"
                style="@style/White"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:hint="@string/app09"
                style="@style/White"/>
        </LinearLayout>
        <Button
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/app02"
            android:id="@+id/u"
            android:onClick="f3"
            android:typeface="serif"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>