<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main7Activity"
    android:background="@drawable/s">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/app7"
            android:layout_marginTop="10dp"
            android:id="@+id/a"
            style="@style/White"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=    "@string/app4"
                style="@style/White"

                />
            <TextView
                android:id="@+id/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/White"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=    "@string/app5"
                style="@style/White"
                />
            <TextView
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/White"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=   "@string/app6"
                style="@style/White"
                />
            <TextView
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/White"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=    "@string/app8"
                style="@style/White"
                />
            <TextView
                android:id="@+id/i"
                android:layout_width="wrap_content"
                android:layout_height="100dp"

                style="@style/White"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btnUpdate"
            android:text="@string/app04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"/>

        <Button
            android:id="@+id/btnDelete"
            android:text="@string/app05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>